# ai_share_helper

./: .gitignore  README.md  create_tasks2.bat  daily_runner.py  pyproject.toml  run_scheduled_task.py  run_screener.py  run_strategy_report.py  run_strategy_track.py  run_zlzy.py  run_zlzy_track.py  sina_test.html  zlzy.txt
config/: keywords.yaml  notifications.yaml  sources.yaml
src/ai_news_radar/: __init__.py  _enricher_helper.py  _spot_helper.py  _sqsm_helper.py  _zlzy_helper.py  cli.py  config.py  database.py  engine.py  feishu_client.py  models.py  scheduler.py  sqsm_indicator.py  stock_analyzer.py  stock_notifier.py  stock_scheduler.py  stock_screener.py  strategy_tracker.py  zlzy_indicator.py  zlzy_tracker.py
src/ai_news_radar/processors/: __init__.py  ai_analyzer.py  deduplicator.py
src/ai_news_radar/reporters/: __init__.py  markdown_report.py  notifier.py
src/ai_news_radar/scrapers/: __init__.py  anthropic_blog.py  base.py  github_fast_growing.py  github_trending.py  hacker_news.py  reddit_ml.py  stock_extractor.py  wechat_article.py
src/ai_news_radar/utils/: __init__.py  helpers.py
templates/: daily_report.md.j2
tests/: __init__.py  test_models.py
